# SDLEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  vendor.yml
EngineLib/include/: library.h
EngineLib/src/: CMakeLists.txt  library.cpp
MainTest/: CMakeLists.txt  main.cpp
MySdlEngine/include/: App.hpp  AppConfig.hpp  library.h
MySdlEngine/include/states/: BaseState.hpp
MySdlEngine/include/utility/: Clock.hpp
MySdlEngine/src/: App.cpp  CMakeLists.txt
MySdlEngine/src/utility/: Clock.cpp
src/: main.cpp
